Privacy Policy & Google Analytics

--- a/src/app/admin/components/users/user-list/user-list.component.scss
+++ b/src/app/admin/components/users/user-list/user-list.component.scss
@@ -87,6 +87,12 @@
   color: white;
 }
 
+.revoke-button {
+  background-color: #dc3545;
+  color: #fff;
+  margin-right: 8px;
+}
+
 @media (max-width: 768px) {
   .page-title {
     font-size: 2rem;
