--- a/src/app/ui/components/about-us/about-us.component.html
+++ b/src/app/ui/components/about-us/about-us.component.html
@@ -5,7 +5,7 @@
   <!-- Hero Section -->
   <div class="hero-section">
     <div class="hero-content">
-      <h1>About Tüm Trading</h1>
+      <h1>About TUMDEX ( Tüm Trading )</h1>
     </div>
   </div>
 
@@ -15,8 +15,8 @@
     <section class="content-section">
       <h2>What did we set out for?</h2>
       <p>
-        Tüm Trading was founded by a group of people with trading experience in different geographies. 
-        Providing consultancy services to the leading companies of the business world, Tüm Trading aims 
+        TUMDEX ( Tüm Trading )dex  was founded by a group of people with trading experience in different geographies. 
+        Providing consultancy services to the leading companies of the business world, TUMDEX ( Tüm Trading ) aims 
         to ensure the successful conclusion of all regional and global commercial operations with its 
         knowledgeable, talented, and experienced human resources.
       </p>
@@ -38,7 +38,7 @@
     <section class="content-section">
       <h2>Quality Policy</h2>
       <p>
-        Tüm Trading bases all of its operations on "quality-oriented" labor. In keeping with this approach:
+        TUMDEX ( Tüm Trading ) bases all of its operations on "quality-oriented" labor. In keeping with this approach:
       </p>
       <ul>
         <li>Advancing company owners and entrepreneurs to a position of leadership and innovation in their industries</li>
@@ -172,7 +172,7 @@
     <section class="content-section">
       <h2>Health and Safety Policy</h2>
       <p>
-        Tüm Trading strives to offer a safe and healthy working environment for all of its operations. 
+        TUMDEX ( Tüm Trading ) strives to offer a safe and healthy working environment for all of its operations. 
         In keeping with this objective, we commit to:
       </p>
       <ul>
