--- a/src/app/ui/components/cookie/cookie-policy/cookie-policy.component.html
+++ b/src/app/ui/components/cookie/cookie-policy/cookie-policy.component.html
@@ -55,7 +55,11 @@
         <h2>{{ translations[currentLang].sections.howToManage.title }}</h2>
         <p>{{ translations[currentLang].sections.howToManage.content }}</p>
       </section>
-  
+      <!-- GDPR Compliance -->
+      <section>
+        <h2>{{ translations[currentLang].sections.gdprCompliance.title }}</h2>
+        <p>{{ translations[currentLang].sections.gdprCompliance.content }}</p>
+      </section>
       <!-- Contact Us -->
       <section>
         <h2>{{ translations[currentLang].sections.contactUs.title }}</h2>
