--- a/src/app/ui/components/user/user-sidebar/user-sidebar.component.html
+++ b/src/app/ui/components/user/user-sidebar/user-sidebar.component.html
@@ -58,6 +58,9 @@
               </svg>
             </div>
           </button>
+          <button (click)="logoutFromAllDevices()" class="btn btn-danger">
+            Logout From All Devices
+          </button>
         </div>
       </div>
     </nav>
