--- a/src/app/admin/components/users/user-list/user-list.component.html
+++ b/src/app/admin/components/users/user-list/user-list.component.html
@@ -63,6 +63,16 @@
                 </button>
               </td>
             </ng-container>
+            
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef class="header-cell">Actions</th>
+              <td mat-cell *matCellDef="let item">
+                <button mat-mini-fab class="revoke-button" matTooltip="Tüm oturumları sonlandır"
+                  (click)="revokeUserTokens(item.id, item.userName)">
+                  <mat-icon>logout</mat-icon>
+                </button>
+              </td>
+            </ng-container>
   
             <ng-container matColumnDef="delete">
               <th mat-header-cell *matHeaderCellDef class="header-cell">Delete</th>
