--- a/src/app/ui/components/downbar/downbar.component.html
+++ b/src/app/ui/components/downbar/downbar.component.html
@@ -7,7 +7,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" [style.fill]="selectedButton === 'home' ? '#e53935' : 'currentColor'" class="bi bi-house" viewBox="0 0 16 16">
             <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
           </svg>
-          <small [style.color]="selectedButton === 'home' ? '#e53935' : ''" [class]="selectedButton === 'home' ? 'active' : 'text-muted'">Ana Sayfa</small>
+          <small [style.color]="selectedButton === 'home' ? '#e53935' : ''" [class]="selectedButton === 'home' ? 'active' : 'text-muted'">Home</small>
         </div>
       </div>
 
@@ -17,7 +17,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" [style.fill]="selectedButton === 'categories' ? '#e53935' : 'currentColor'" class="bi bi-grid-3x3-gap" viewBox="0 0 16 16">
             <path d="M4 2v2H2V2zm1 12v-2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V7a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m5 10v-2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V7a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1M9 2v2H7V2zm5 0v2h-2V2zM4 7v2H2V7zm5 0v2H7V7zm5 0h-2v2h2zM4 12v2H2v-2zm5 0v2H7v-2zm5 0v2h-2v-2zM12 1a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm-1 6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm1 4a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1z"/>
           </svg>
-          <small [style.color]="selectedButton === 'categories' ? '#e53935' : ''" [class]="selectedButton === 'categories' ? 'active' : 'text-muted'">Kategoriler</small>
+          <small [style.color]="selectedButton === 'categories' ? '#e53935' : ''" [class]="selectedButton === 'categories' ? 'active' : 'text-muted'">Categories</small>
         </div>
       </div>
 
@@ -27,7 +27,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" [style.fill]="selectedButton === 'account' ? '#e53935' : 'currentColor'" class="bi bi-person" viewBox="0 0 16 16">
             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
           </svg>
-          <small [style.color]="selectedButton === 'account' ? '#e53935' : ''" [class]="selectedButton === 'account' ? 'active' : 'text-muted'">Hesabım</small>
+          <small [style.color]="selectedButton === 'account' ? '#e53935' : ''" [class]="selectedButton === 'account' ? 'active' : 'text-muted'">Account</small>
         </div>
       </div>
 
@@ -42,7 +42,7 @@
               {{cartItemCount}}
             </span>
           </div>
-          <small [style.color]="selectedButton === 'cart' ? '#e53935' : ''" [class]="selectedButton === 'cart' ? 'active' : 'text-muted'">Sepet</small>
+          <small [style.color]="selectedButton === 'cart' ? '#e53935' : ''" [class]="selectedButton === 'cart' ? 'active' : 'text-muted'">Cart</small>
         </div>
       </div>
     </div>
